Tutorial-Psi4_tetrads_Ccode_function: functionally complete.

--- a/Tutorial-Psi4_tetrads_Ccode_function.ipynb
+++ b/Tutorial-Psi4_tetrads_Ccode_function.ipynb
@@ -45,12 +45,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Step 1.a: import all needed modules from NRPy+:\n",
     "import sympy as sp\n",
+    "from outputC import *\n",
     "import NRPy_param_funcs as par\n",
     "import indexedexp as ixp\n",
     "import grid as gri\n",
@@ -74,7 +75,8 @@
     "DIM = 3\n",
     "\n",
     "# Step 1.e: Import the tetrad module\n",
-    "import BSSN.Psi4_tetrads as BP4T"
+    "import BSSN.Psi4_tetrads as BP4T\n",
+    "par.set_parval_from_str(\"BSSN.Psi4_tetrads::TetradChoice\", \"QuasiKinnersley\")"
    ]
   },
   {
@@ -91,10 +93,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Appended to file \"BSSN/Psi4_tetrads.h\"\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Step 2: Construct the C function header and \n",
+    "#         convert (xx0,xx1,xx2) to the corresponding\n",
+    "#         (x,y,z), as both are needed for the tetrad\n",
+    "#         expressions.\n",
+    "outCparams = \"preindent=1,outCfileaccess=a,outCverbose=False,includebraces=False\"\n",
+    "tetrad_Ccode_filename = \"BSSN/Psi4_tetrads.h\"\n",
+    "\n",
+    "with open(tetrad_Ccode_filename, \"w\") as file:\n",
+    "    file.write(\"\"\"\n",
+    "// Taking as input (xx0,xx1,xx2), this function outputs\n",
+    "//   the chosen Psi4 tetrad in the (xx0,xx1,xx2) basis\n",
+    "void Psi4_tetrad(REAL xx0xx1xx2[3], const REAL *in_gfs,\n",
+    "                 REAL n4U[4],REAL mre4U[4],REAL mim4U[4]) {\n",
+    "    const REAL xx0 = xx0xx1xx2[0];\n",
+    "    const REAL xx1 = xx0xx1xx2[1];\n",
+    "    const REAL xx2 = xx0xx1xx2[2];\n",
+    "\"\"\")\n",
+    "outputC([rfm.xxCart[0],rfm.xxCart[1],rfm.xxCart[2]],[\"REAL x\",\"REAL y\",\"REAL z\"],tetrad_Ccode_filename,outCparams)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -104,15 +133,56 @@
     "\n",
     "# Step 3: Output the tetrad in the reference-metric basis \\[Back to [top](#toc)\\]\n",
     "$$\\label{outtetrad}$$\n",
-    "\n"
+    "\n",
+    "Next we call BP4T.Psi4_tetrads() to construct the symbolic expressions for the tetrad vectors $n^\\mu$, $\\Re m^\\mu$, and $\\Im m^\\mu$, which are needed to construct $\\Psi_4$. \n",
+    "\n",
+    "As the tetrad expressions depend on BSSN gridfunctions, we pass the expressions into fin.FD_outputC() so that the needed gridfunction values are read in from memory as appropriate."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "execution_count": 3,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "initialize_param() minor warning: Did nothing; already initialized parameter reference_metric::M_PI\n",
+      "initialize_param() minor warning: Did nothing; already initialized parameter reference_metric::RMAX\n",
+      "initialize_param() minor warning: Did nothing; already initialized parameter reference_metric::M_PI\n",
+      "initialize_param() minor warning: Did nothing; already initialized parameter reference_metric::RMAX\n",
+      "Appended to file \"BSSN/Psi4_tetrads.h\"\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Step 3: Output the tetrad in the reference-metric basis.\n",
+    "\n",
+    "# Step 3.a: BP4T.Psi4_tetrads() to construct the symbolic \n",
+    "#           expressions for the tetrad vectors $n^\\mu$, \n",
+    "#           $\\Re m^\\mu$, and $\\Im m^\\mu$, which are needed \n",
+    "#           to construct $\\Psi_4$. \n",
+    "\n",
+    "BP4T.Psi4_tetrads()\n",
+    "Psi4_tetrad_vecs = []\n",
+    "\n",
+    "# Step 3.b: As the tetrad expressions depend on BSSN \n",
+    "#           gridfunctions, we pass the expressions into \n",
+    "#           fin.FD_outputC() so that the needed gridfunction\n",
+    "#           values are read in from memory as appropriate.\n",
+    "for i in range(4):\n",
+    "    Psi4_tetrad_vecs.append(lhrh(lhs=\"n4U[\"+str(i)+\"]\",  rhs=BP4T.n4U[i]))\n",
+    "    Psi4_tetrad_vecs.append(lhrh(lhs=\"mre4U[\"+str(i)+\"]\",rhs=BP4T.mre4U[i]))\n",
+    "    Psi4_tetrad_vecs.append(lhrh(lhs=\"mim4U[\"+str(i)+\"]\",rhs=BP4T.mim4U[i]))\n",
+    "\n",
+    "fin.FD_outputC(tetrad_Ccode_filename,Psi4_tetrad_vecs, outCparams)\n",
+    "\n",
+    "with open(tetrad_Ccode_filename, \"a\") as file:\n",
+    "    file.write(\"}\\n\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -127,15 +197,47 @@
     "1. this tutorial and \n",
     "2. the NRPy+ BSSN.Psi4_tetrads_Ccode_function module.\n",
     "\n",
-    "By default, we compare all quantities in Spherical coordinates, though other coordinate systems may be chosen."
+    "By default, we compare the file that is output, assuming quantities are expressed in Spherical coordinates. Other coordinate systems may be chosen if desired."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "initialize_param() minor warning: Did nothing; already initialized parameter reference_metric::M_PI\n",
+      "initialize_param() minor warning: Did nothing; already initialized parameter reference_metric::RMAX\n",
+      "Appended to file \"BSSN/Psi4_tetrads-validation.h\"\n",
+      "initialize_param() minor warning: Did nothing; already initialized parameter reference_metric::M_PI\n",
+      "initialize_param() minor warning: Did nothing; already initialized parameter reference_metric::RMAX\n",
+      "initialize_param() minor warning: Did nothing; already initialized parameter reference_metric::M_PI\n",
+      "initialize_param() minor warning: Did nothing; already initialized parameter reference_metric::RMAX\n",
+      "initialize_param() minor warning: Did nothing; already initialized parameter BSSN.Psi4_tetrads::x\n",
+      "initialize_param() minor warning: Did nothing; already initialized parameter BSSN.Psi4_tetrads::y\n",
+      "initialize_param() minor warning: Did nothing; already initialized parameter BSSN.Psi4_tetrads::z\n",
+      "Appended to file \"BSSN/Psi4_tetrads-validation.h\"\n",
+      "\n",
+      "Validation test PASSED.\n"
+     ]
+    }
+   ],
+   "source": [
+    "import filecmp\n",
+    "\n",
+    "import BSSN.Psi4_tetrads_Ccode_function as Psi4C\n",
+    "Psi4C.Psi4_tetrads_Ccode_function(tetrad_Ccode_filename=\"BSSN/Psi4_tetrads-validation.h\")\n",
+    "\n",
+    "if filecmp.cmp('BSSN/Psi4_tetrads.h',\n",
+    "               'BSSN/Psi4_tetrads-validation.h') == False:\n",
+    "    print(\"\\nERROR: Validation test FAILED!\")\n",
+    "    exit(1)\n",
+    "else:\n",
+    "    print(\"\\nValidation test PASSED.\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -149,10 +251,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[NbConvertApp] Converting notebook Tutorial-Psi4_tetrads_Ccode_function.ipynb to latex\n",
+      "[NbConvertApp] Writing 32617 bytes to Tutorial-Psi4_tetrads_Ccode_function.tex\n",
+      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
+      " restricted \\write18 enabled.\n",
+      "entering extended mode\n",
+      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
+      " restricted \\write18 enabled.\n",
+      "entering extended mode\n",
+      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
+      " restricted \\write18 enabled.\n",
+      "entering extended mode\n"
+     ]
+    }
+   ],
+   "source": [
+    "!jupyter nbconvert --to latex --template latex_nrpy_style.tplx Tutorial-Psi4_tetrads_Ccode_function.ipynb\n",
+    "!pdflatex -interaction=batchmode Tutorial-Psi4_tetrads_Ccode_function.tex\n",
+    "!pdflatex -interaction=batchmode Tutorial-Psi4_tetrads_Ccode_function.tex\n",
+    "!pdflatex -interaction=batchmode Tutorial-Psi4_tetrads_Ccode_function.tex\n",
+    "!rm -f Tut*.out Tut*.aux Tut*.log"
+   ]
   }
  ],
  "metadata": {
