--- a/Tutorial-Start_to_Finish-BSSNCurvilinear-Two_BHs_Collide-Psi4.ipynb
+++ b/Tutorial-Start_to_Finish-BSSNCurvilinear-Two_BHs_Collide-Psi4.ipynb
@@ -560,7 +560,7 @@
     "}\n",
     "\n",
     "// Step P10.c: Psi4 output\n",
-    "void psi4(const int i0,const int i1,const int i2,,const REAL dxx[3], REAL *xx[3], \n",
+    "void psi4(const int i0,const int i1,const int i2, const REAL dxx[3], REAL *xx[3], \n",
     "                            REAL *in_gfs, REAL *aux_gfs) {\n",
     "#include \"Psi4_tetrad.h\"\n",
     "#pragma omp parallel for\n",
