Tutorial-Start_to_Finish-BSSNCurvilinear-Two_BHs_Collide-Psi4: continue work.

--- a/Tutorial-Start_to_Finish-BSSNCurvilinear-Two_BHs_Collide-Psi4.ipynb
+++ b/Tutorial-Start_to_Finish-BSSNCurvilinear-Two_BHs_Collide-Psi4.ipynb
@@ -560,10 +560,10 @@
     "}\n",
     "\n",
     "// Step P10.c: Psi4 output\n",
-    "void psi4(const int i0,const int i1,const int i2, const REAL dxx[3], REAL *xx[3], \n",
-    "                            REAL *in_gfs, REAL *aux_gfs) {\n",
+    "void psi4(const int Nxx_plus_2NGHOSTS[3],const int i0,const int i1,const int i2, \n",
+    "          const REAL dxx[3], REAL *xx[3], \n",
+    "          REAL *in_gfs, REAL *aux_gfs) {\n",
     "#include \"Psi4_tetrad.h\"\n",
-    "#pragma omp parallel for\n",
     "{\n",
     "    const int idx = IDX3(i0,i1,i2);\n",
     "    const REAL xx0 = xx[0][i0];\n",
@@ -746,7 +746,7 @@
     "        LOOP_REGION(r_ext_idx,r_ext_idx+1, \n",
     "                    NGHOSTS-1,Nxx_plus_2NGHOSTS[1]-NGHOSTS+1, \n",
     "                    NGHOSTS-1,Nxx_plus_2NGHOSTS[2]-NGHOSTS+1) {\n",
-    "            psi4(i0,i1,i2,  dxx,xx,  evol_gfs,  aux_gfs);\n",
+    "            psi4(Nxx_plus_2NGHOSTS, i0,i1,i2,  dxx,xx,  evol_gfs,  aux_gfs);\n",
     "            const int idx = IDX3(i0,i1,i2);\n",
     "            REAL xx0 = xx[0][i0];\n",
     "            REAL xx1 = xx[1][i1];\n",
