Tutorial-WeylScalarsInvariants-Cartesian: fix documentation error. Tutorial-Psi4_tetrads: Fix normalization

--- a/Tutorial-WeylScalarsInvariants-Cartesian.ipynb
+++ b/Tutorial-WeylScalarsInvariants-Cartesian.ipynb
@@ -138,9 +138,9 @@
     "\\end{align}\n",
     "and carry out the Gram-Schmidt orthonormalization process. Note that these vectors are initially orthogonal to each other; one is in the $\\phi$ direction, one is in $r$, and the third is the cross product of the first two. The vectors $w_i^a$ are placeholders in the code; the final product of the orthonormalization is the vectors $e_i^a$. So,\n",
     "\\begin{align}\n",
-    "e_1^a &= \\frac{v_1^a}{\\omega_{11}} \\\\\n",
-    "e_2^a &= \\frac{v_2^a - \\omega_{12} e_1^a}{\\omega_{22}} \\\\\n",
-    "e_3^a &= \\frac{v_3^a - \\omega_{13} e_1^a - \\omega_{23} e_2^a}{\\omega_{33}}, \\\\\n",
+    "e_1^a &= \\frac{v_1^a}{\\sqrt{\\omega_{11}}} \\\\\n",
+    "e_2^a &= \\frac{v_2^a - \\omega_{12} e_1^a}{\\sqrt{\\omega_{22}}} \\\\\n",
+    "e_3^a &= \\frac{v_3^a - \\omega_{13} e_1^a - \\omega_{23} e_2^a}{\\sqrt{\\omega_{33}}}, \\\\\n",
     "\\end{align}\n",
     "where $\\omega_{ij} = v_i^a v_j^b \\gamma_{ab}$ needs to be updated between steps (to save resources, we can get away with only calculating components as needed), and uses $e_i^a$ instead of $v_i^a$ if it has been calculated. Recall that $\\gamma_{ab}$ was declared as a gridfunction above.\n",
     "\n",
