Tutorial-Start_to_Finish-BSSNCurvilinear-Two_BHs_Collide-Psi4: fix/improve Psi4 file output

--- a/Tutorial-Start_to_Finish-BSSNCurvilinear-Two_BHs_Collide-Psi4.ipynb
+++ b/Tutorial-Start_to_Finish-BSSNCurvilinear-Two_BHs_Collide-Psi4.ipynb
@@ -773,6 +773,25 @@
     "                    aux_gfs[IDX4pt(PSI4IGF,idx)]);\n",
     "        }\n",
     "        fclose(out2DPsi4);\n",
+    "\n",
+    "        sprintf(filename,\"outPsi4_l2m0-r%.2f.txt\",Nxx[0],r_ext,n);\n",
+    "        FILE *outPsi4rl2m0;\n",
+    "        if(n==0) outPsi4rl2m0 = fopen(filename, \"w\");\n",
+    "        else outPsi4rl2m0 = fopen(filename, \"a\");\n",
+    "\n",
+    "        REAL Psi4rl2m0 = 0.0;\n",
+    "        LOOP_REGION(r_ext_idx,r_ext_idx+1, \n",
+    "                    NGHOSTS-1,Nxx_plus_2NGHOSTS[1]-NGHOSTS+1, \n",
+    "                    NGHOSTS,NGHOSTS+1) {\n",
+    "            psi4(Nxx_plus_2NGHOSTS, i0,i1,i2,  dxx,xx,  evol_gfs,  aux_gfs);\n",
+    "            const int idx = IDX3(i0,i1,i2);\n",
+    "            // Based on http://www.demonstrations.wolfram.com/SpinWeightedSphericalHarmonics/\n",
+    "            // we have {}_{s}_Y_{lm} = {}_{-2}_Y_{20} = 1/4 * sqrt(15 / (2*pi)) * sin(th)^2\n",
+    "            REAL sinth = sin(xx[1][i1]);\n",
+    "            Psi4rl2m0 += aux_gfs[IDX4pt(PSI4RGF,idx)]*0.25*sqrt(15.0 / (2.0*M_PI)) * sinth*sinth * (2*M_PI) * dxx[1];\n",
+    "        }\n",
+    "        fprintf(outPsi4rl2m0,\"%e %.15e\\n\", (REAL)(n+1)*dt, Psi4rl2m0);\n",
+    "        fclose(outPsi4rl2m0);\n",
     "            \n",
     "        // Evaluate Hamiltonian constraint violation\n",
     "        Hamiltonian_constraint(Nxx,Nxx_plus_2NGHOSTS,dxx, xx, evol_gfs, aux_gfs);\n",
