Tutorial-Start_to_Finish-BSSNCurvilinear-Two_BHs_Collide-Psi4: fix/improve Psi4 file output

--- a/Tutorial-Start_to_Finish-BSSNCurvilinear-Two_BHs_Collide-Psi4.ipynb
+++ b/Tutorial-Start_to_Finish-BSSNCurvilinear-Two_BHs_Collide-Psi4.ipynb
@@ -774,7 +774,7 @@
     "        }\n",
     "        fclose(out2DPsi4);\n",
     "\n",
-    "        sprintf(filename,\"outPsi4_l2m0-%d-r%.2f.txt\",Nxx[0],r_ext,n);\n",
+    "        sprintf(filename,\"outPsi4_l2m0-%d-r%.2f.txt\",Nxx[0],r_ext);\n",
     "        FILE *outPsi4rl2m0;\n",
     "        if(n==0) outPsi4rl2m0 = fopen(filename, \"w\");\n",
     "        else outPsi4rl2m0 = fopen(filename, \"a\");\n",
