Tutorial-Start_to_Finish-BSSNCurvilinear-Two_BHs_Collide-Psi4: fix/improve Psi4 file output

--- a/Tutorial-Start_to_Finish-BSSNCurvilinear-Two_BHs_Collide-Psi4.ipynb
+++ b/Tutorial-Start_to_Finish-BSSNCurvilinear-Two_BHs_Collide-Psi4.ipynb
@@ -775,11 +775,11 @@
     "        fclose(out2DPsi4);\n",
     "\n",
     "        sprintf(filename,\"outPsi4_l2m0-%d-r%.2f.txt\",Nxx[0],r_ext);\n",
-    "        FILE *outPsi4rl2m0;\n",
-    "        if(n==0) outPsi4rl2m0 = fopen(filename, \"w\");\n",
-    "        else outPsi4rl2m0 = fopen(filename, \"a\");\n",
-    "\n",
-    "        REAL Psi4rl2m0 = 0.0;\n",
+    "        FILE *outPsi4_l2m0;\n",
+    "        if(n==0) outPsi4_l2m0 = fopen(filename, \"w\");\n",
+    "        else     outPsi4_l2m0 = fopen(filename, \"a\");\n",
+    "        REAL Psi4r_l2m0 = 0.0;\n",
+    "        REAL Psi4i_l2m0 = 0.0;\n",
     "        LOOP_REGION(r_ext_idx,r_ext_idx+1, \n",
     "                    NGHOSTS,Nxx_plus_2NGHOSTS[1]-NGHOSTS, \n",
     "                    NGHOSTS,NGHOSTS+1) {\n",
@@ -788,10 +788,11 @@
     "            // Based on http://www.demonstrations.wolfram.com/SpinWeightedSphericalHarmonics/\n",
     "            // we have {}_{s}_Y_{lm} = {}_{-2}_Y_{20} = 1/4 * sqrt(15 / (2*pi)) * sin(th)^2\n",
     "            REAL sinth = sin(xx[1][i1]);\n",
-    "            Psi4rl2m0 += aux_gfs[IDX4pt(PSI4RGF,idx)]*0.25*sqrt(15.0 / (2.0*M_PI)) * sinth*sinth * (2*M_PI) * dxx[1];\n",
+    "            Psi4r_l2m0 += aux_gfs[IDX4pt(PSI4RGF,idx)]*0.25*sqrt(15.0 / (2.0*M_PI)) * sinth*sinth * (2*M_PI) * dxx[1];\n",
+    "            Psi4i_l2m0 += aux_gfs[IDX4pt(PSI4IGF,idx)]*0.25*sqrt(15.0 / (2.0*M_PI)) * sinth*sinth * (2*M_PI) * dxx[1];\n",
     "        }\n",
-    "        fprintf(outPsi4rl2m0,\"%e %.15e\\n\", (REAL)(n+1)*dt, Psi4rl2m0);\n",
-    "        fclose(outPsi4rl2m0);\n",
+    "        fprintf(outPsi4_l2m0,\"%e %.15e %.15e\\n\", (REAL)(n+1)*dt, Psi4r_l2m0,Psi4i_l2m0);\n",
+    "        fclose(outPsi4_l2m0);\n",
     "            \n",
     "        // Evaluate Hamiltonian constraint violation\n",
     "        Hamiltonian_constraint(Nxx,Nxx_plus_2NGHOSTS,dxx, xx, evol_gfs, aux_gfs);\n",
