--- a/Tutorial-Start_to_Finish-BSSNCurvilinear-Two_BHs_Collide-Psi4.ipynb
+++ b/Tutorial-Start_to_Finish-BSSNCurvilinear-Two_BHs_Collide-Psi4.ipynb
@@ -788,8 +788,9 @@
     "            // Based on http://www.demonstrations.wolfram.com/SpinWeightedSphericalHarmonics/\n",
     "            // we have {}_{s}_Y_{lm} = {}_{-2}_Y_{20} = 1/4 * sqrt(15 / (2*pi)) * sin(th)^2\n",
     "            REAL sinth = sin(xx[1][i1]);\n",
-    "            Psi4r_l2m0 += aux_gfs[IDX4pt(PSI4RGF,idx)]*0.25*sqrt(15.0 / (2.0*M_PI)) * sinth*sinth * (2*M_PI) * dxx[1];\n",
-    "            Psi4i_l2m0 += aux_gfs[IDX4pt(PSI4IGF,idx)]*0.25*sqrt(15.0 / (2.0*M_PI)) * sinth*sinth * (2*M_PI) * dxx[1];\n",
+    "            /*             psi4                       *   {}_{-2}_Y_{20}                            * (int dphi) * sinth*dtheta */\n",
+    "            Psi4r_l2m0 += aux_gfs[IDX4pt(PSI4RGF,idx)]*(0.25*sqrt(15.0 / (2.0*M_PI)) * sinth*sinth) * (2*M_PI) * sinth*dxx[1];\n",
+    "            Psi4i_l2m0 += aux_gfs[IDX4pt(PSI4IGF,idx)]*(0.25*sqrt(15.0 / (2.0*M_PI)) * sinth*sinth) * (2*M_PI) * sinth*dxx[1];\n",
     "        }\n",
     "        fprintf(outPsi4_l2m0,\"%e %.15e %.15e\\n\", (REAL)(n+1)*dt, Psi4r_l2m0,Psi4i_l2m0);\n",
     "        fclose(outPsi4_l2m0);\n",
