Tutorial-Start_to_Finish-BSSNCurvilinear-Two_BHs_Collide-Psi4: improve parameters

--- a/Tutorial-Start_to_Finish-BSSNCurvilinear-Two_BHs_Collide-Psi4.ipynb
+++ b/Tutorial-Start_to_Finish-BSSNCurvilinear-Two_BHs_Collide-Psi4.ipynb
@@ -462,8 +462,9 @@
     "// Spherical coordinates parameter\n",
     "const REAL RMAX    = 75.;\n",
     "// SinhSpherical coordinates parameters\n",
-    "const REAL AMPL    = 1000; // matching B-L test from REB paper (Pg 20 of https://arxiv.org/pdf/1712.07658.pdf)\n",
-    "const REAL SINHW   = 0.125; // matching B-L test from REB paper (Pg 20 of https://arxiv.org/pdf/1712.07658.pdf)\n",
+    "const REAL AMPL    = 400; // matching B-L test from REB paper (Pg 20 of https://arxiv.org/pdf/1712.07658.pdf)\n",
+    "//const REAL SINHW   = 0.125; // matching B-L test from REB paper (Pg 20 of https://arxiv.org/pdf/1712.07658.pdf)\n",
+    "const REAL SINHW   = 0.2; // matching B-L test from REB paper (Pg 20 of https://arxiv.org/pdf/1712.07658.pdf)\n",
     "// Cylindrical coordinates parameters\n",
     "const REAL ZMIN   = -7.5;\n",
     "const REAL ZMAX   =  7.5;\n",
@@ -485,8 +486,8 @@
     "#define UPWIND_ALG(UpwindVecU) UpwindVecU > 0.0 ? 1.0 : 0.0\n",
     "\n",
     "// Step P5: Set free parameters for the (Brill-Lindquist) initial data\n",
-    "const REAL BH1_posn_x = 0.0,BH1_posn_y = 0.0,BH1_posn_z = +0.5;\n",
-    "const REAL BH2_posn_x = 0.0,BH2_posn_y = 0.0,BH2_posn_z = -0.5;\n",
+    "const REAL BH1_posn_x = 0.0,BH1_posn_y = 0.0,BH1_posn_z = +0.25; // SUPER CLOSE\n",
+    "const REAL BH2_posn_x = 0.0,BH2_posn_y = 0.0,BH2_posn_z = -0.25; // SUPER CLOSE\n",
     "const REAL BH1_mass = 0.5,BH2_mass = 0.5;\n",
     "\n",
     "// Step P6: Declare the IDX4(gf,i,j,k) macro, which enables us to store 4-dimensions of\n",
