Psi4_tetrads: Fix omega calculation

--- a/Tutorial-Psi4_tetrads.ipynb
+++ b/Tutorial-Psi4_tetrads.ipynb
@@ -252,12 +252,16 @@
     "    else:\n",
     "        print(\"ERROR: unknown vector!\")\n",
     "        exit(1)\n",
-    "        \n",
-    "for i in range(DIM):\n",
-    "    for j in range(DIM):\n",
-    "        for a in range(DIM):\n",
-    "            for b in range(DIM):\n",
-    "                omegaDD[i][j] += v_vectorDU(v1U,v2U,v3U, i,a)*v_vectorDU(v1U,v2U,v3U, j,b)*gammaDD[a][b]\n",
+    "\n",
+    "def update_omega(omegaDD, v1U,v2U,v3U,gammaDD):\n",
+    "    for i in range(DIM):\n",
+    "        for j in range(DIM):\n",
+    "            omegaDD[i][j] = sp.sympify(0)\n",
+    "    for i in range(DIM):\n",
+    "        for j in range(DIM):\n",
+    "            for a in range(DIM):\n",
+    "                for b in range(DIM):\n",
+    "                    omegaDD[i][j] += v_vectorDU(v1U,v2U,v3U, i,a)*v_vectorDU(v1U,v2U,v3U, j,b)*gammaDD[a][b]\n",
     "\n",
     "# Step 2.i: Define e^a_i. Note that:\n",
     "#           omegaDD[0][0] = \\omega_{11} above; \n",
@@ -265,9 +269,14 @@
     "e1U = ixp.zerorank1()\n",
     "e2U = ixp.zerorank1()\n",
     "e3U = ixp.zerorank1()\n",
+    "update_omega(omegaDD, v1U,v2U,v3U,gammaDD)\n",
     "for a in range(DIM):\n",
     "    e1U[a] = v1U[a]/sp.sqrt(omegaDD[0][0])\n",
+    "update_omega(omegaDD, e1U,v2U,v3U,gammaDD)\n",
+    "for a in range(DIM):\n",
     "    e2U[a] = (v2U[a] - omegaDD[0][1]*e1U[a])/sp.sqrt(omegaDD[1][1])\n",
+    "update_omega(omegaDD, e1U,e2U,v3U,gammaDD)\n",
+    "for a in range(DIM):\n",
     "    e3U[a] = (v3U[a] - omegaDD[0][2]*e1U[a] - omegaDD[1][2]*e2U[a])/sp.sqrt(omegaDD[2][2])"
    ]
   },
@@ -411,16 +420,22 @@
      "output_type": "stream",
      "text": [
       "[NbConvertApp] Converting notebook Tutorial-Psi4_tetrads.ipynb to latex\n",
-      "[NbConvertApp] Writing 46081 bytes to Tutorial-Psi4_tetrads.tex\n",
+      "[NbConvertApp] Writing 3554061 bytes to Tutorial-Psi4_tetrads.tex\n",
       "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
       " restricted \\write18 enabled.\n",
       "entering extended mode\n",
+      "! Unable to read an entire line---bufsize=200000.\n",
+      "Please increase buf_size in texmf.cnf.\n",
       "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
       " restricted \\write18 enabled.\n",
       "entering extended mode\n",
+      "! Unable to read an entire line---bufsize=200000.\n",
+      "Please increase buf_size in texmf.cnf.\n",
       "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
       " restricted \\write18 enabled.\n",
-      "entering extended mode\n"
+      "entering extended mode\n",
+      "! Unable to read an entire line---bufsize=200000.\n",
+      "Please increase buf_size in texmf.cnf.\n"
      ]
     }
    ],
